--- a/_posts/2014-10-11-weekly.markdown
+++ b/_posts/2014-10-11-weekly.markdown
@@ -3,9 +3,7 @@ layout: post
 title: "岂凡技术小报 第一期"
 ---
 
-## @Atry
-
-### 硬盘满了
+## @Atry: 硬盘满了
 
 我们用的持续集成服务器是一台虚拟机内的虚拟机。虚拟机内的虚拟机的虚拟硬盘文件内的分区还是LVM的虚拟分区。最后虚拟分区内再划分了一块ext4分区。
 
@@ -21,7 +19,10 @@ title: "岂凡技术小报 第一期"
 
 如果下次需要扩大分区，我可能会选择直接增加一块新的虚拟硬盘，直接在原有虚拟机内给新硬盘分区，就不需要把原有虚拟硬盘挂到别的虚拟机上了。
 
-### 为什么Java程序员要写又臭又长的`public int getXxx() { return xxx; }`
+## @Atry: 为什么Java程序员要写又臭又长的`public int getXxx() { return xxx; }`？
 
-前两天和 @zxiy 聊天时，提到Java程序中往往会充满高深莫测的getXxx、setXxx、addXxxListener。这是为什么呢？请见[Java bean 是个什么概念？](http://www.zhihu.com/question/19773379/answer/31625054)。
+前两天和 @zxiy 聊天时，提到Java程序中往往会充满高深莫测的getXxx、setXxx、addXxxListener。为什么呢？请见[Java bean 是个什么概念？](http://www.zhihu.com/question/19773379/answer/31625054)。
 
+## @Atry: 删删删
+
+代码评审时，最常见的意见是什么？当然是**删！删！删！**
