--- a/_posts/2014-10-11-weekly.markdown
+++ b/_posts/2014-10-11-weekly.markdown
@@ -50,3 +50,11 @@ title: "岂凡技术小报 第一期"
 在`createUser`语法中，也可以设置这个用户是属于哪个数据库的，但是！如果没有`use 数据库名`直接在`createUser`中指定数据库名，MongoDb不会报错，只是这个账户就不知道设给哪个数据库了，因为哪个数据库都不能用这个账户来访问。
 
 顺便说，升级鉴权方式带来的一系列问题全部搞好之后的几小时内，服务器硬盘就满了:)
+
+## @chank: 客户端数量在高压下计数错误
+
+客户端数量在高压下计数会出现错误，因为之前使用定时器和stm出了问题，所以刚开始查该问题时还是把重点放在了定时器和stm的使用上，后来在写stateless-future-util的单元测试用例时才发现定时器没有问题。问题在于在启动一个clien并把该client加到clients中时clients忘了加锁导致的。
+
+使用防御式编程是很有必要的，即在编码时多使用assert。因为这次在性能评测查bug时通过多用assert发现了一些没有暴露出来但也很难会暴露出来的问题。例如在结束链接时竟然检查了两次链接可不可以被清理掉，而其中有一次是没有必要的
+
+ps：在stm中使用定时器好麻烦，如果没有模板照着写的话很容易出错
